# CMake_Template

./: CMakeLists.txt  README.md  README_zh-CN.md  main.cpp  setup_vinci_emis.bash  vinci_emis
install/: .setup.bash
install/include/Func1/: testFunc.h
log/: latest_list
script/: setup_vinci_emis.bash  vinci_emis
src/: CMakeLists.txt  main.cpp  testFunc.cpp
src/Func1/: CMakeLists.txt  testFunc.c
src/Func1/src/: testFunc.c
src/Matrix/: CMakeLists.txt  eigen3_test.cpp
src/Matrix/inc/: eigen3_test.hpp
src/Matrix/src/: eigen3_test.cpp
